<resources>
    <string name="app_name">AppName</string>
    <string name="title_main_home">首页</string>
    <string name="title_main_product">产品</string>
    <string name="title_main_shopping_cart">购物车</string>
    <string name="title_main_my">我的</string>
    <string name="title_main_setting">设置</string>
    <string name="setting_push">推送通知</string>
    <string name="setting_clear">清除缓存（图片、数据、和登录信息）</string>
    <string name="setting_updatevision">立即检查新版本</string>
    <string name="setting_perimission_setting">权限设置</string>
    <string name="setting_privacy_policy">索尼隐私政策</string>
    <string name="setting_help">新增功能介绍</string>
    <string name="setting_about">关于索尼在线商城</string>
    <string name="test_content">关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n关于索尼在线商城\n</string>
    <string name="deleteHistoryMessage">要清空搜索记录吗？</string>
    <string name="button_positive">确定</string>
    <string name="button_negative">取消</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
</resources>