<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/mFrameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomBarBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/bottomBarBackground"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/homeButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/select_home_menu"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/title_main_home"
            android:textColor="@color/selector_bottom_menu"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/productButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/select_home_menu"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/title_main_product"
            android:textColor="@color/selector_bottom_menu"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/shoppingCardButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/select_home_menu"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/title_main_shopping_cart"
            android:textColor="@color/selector_bottom_menu"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/myButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/select_home_menu"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/title_main_my"
            android:textColor="@color/selector_bottom_menu"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/settingButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/select_home_menu"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/title_main_setting"
            android:textColor="@color/selector_bottom_menu"
            android:textSize="12sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>